--- a/plugins-server/cloud9.ide.salesforce/package.json
+++ b/plugins-server/cloud9.ide.salesforce/package.json
@@ -11,6 +11,7 @@
             "process-manager",
             "run-shell",
             "eventbus",
+            "sandbox",
             "vfs"
         ]
     }
