--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
     "pm": "sm",
     "dependencies": {
-        "connect": "1.8.x",
+        "connect": "1.8.7",
 
         "sourcemint-loader-js": "0.x",
         "sourcemint-platform-nodejs": "0.x",
