--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
         "architect": "0.1.4",
         "connect-architect": "0.0.4",
 
-        "smith.io": "0.0.17",
-        "engine.io-client": "0.2.0"
+        "smith.io": "0.0.18"
     },
 
     "devDependencies": {
@@ -52,7 +51,8 @@
         "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/43bd19b9e7b2ddb95bdc1116143ce7fb22c6a5d3"],
         "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/d7ab6ada6ec802f8d4107dae038327c7fa9c5601"],
         "browser-msgpack-js":   ["npm", "https://github.com/creationix/msgpack-js-browser/tarball/e6dc213cb602d5a8fb402520d7841d2664cd10e9"],
-        "smith":        ["npm", "https://github.com/c9/smith/tarball/0080a7cd8308401473941aa97a02043c0467467e"]
+        "smith":        ["npm", "https://github.com/c9/smith/tarball/0080a7cd8308401473941aa97a02043c0467467e"],
+        "engine.io-client":     ["npm", "https://github.com/c9/engine.io-client/tarball/348423707c523cf99e8987fe4c1493da0353959f"]        
     },
 
     "repository" : {
