--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .settings/org.eclipse.core.resources.prefs
 .settings/org.eclipse.core.runtime.prefs
 .*.gz
-elements/.DS_Store
+.DS_Store
+.c9revisions
+.settings
