--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
         "connect-architect": "0.0.6",
 
         "smith": "0.1.9",
-        "smith.io": "0.0.22"
+        "smith.io": "0.0.22",
+        "vfs-architect": "0.0.2"
     },
 
     "devDependencies": {
         "nodeunit": "0.7.4",
         "sinon": "1.3.4",
         "rimraf": "2.0.1",
-        "vfs-local": "0.1.6",
-        "vfs-nodefs-adapter": "0.0.4"
+        "vfs-local": "~0.3.4",
+        "vfs-nodefs-adapter": "~0.3.0"
     },
 
     "mappings": {
@@ -48,8 +49,7 @@
         "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/bee19ea38f0260de6658043fffa587bab955b5bf"],
         "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/d2fac9b09724cb2e75e2807191eace9bc27d3b52"],
         "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/2e9f9ecf423ca68cf49bf328ba71a5e4a13e7950"],
-        "vfs":          ["npm", "https://github.com/c9/vfs/tarball/61841e99eda6ea9a8b801fd145b9a0af286ad324"],
-        "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/43bd19b9e7b2ddb95bdc1116143ce7fb22c6a5d3"],
+        "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/d851a8b6b1fbc4148c975941e7ee0141f99e50bf"],
         "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/d7ab6ada6ec802f8d4107dae038327c7fa9c5601"]
     },
 
