--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "connect-architect": "0.0.6",
 
         "smith": "0.1.9",
-        "smith.io": "0.0.23"
+        "smith.io": "0.0.24",
         "vfs-architect": "0.0.2"
     },
 
