--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ plugins-client/cloud9.core/www/js/
 plugins-client/ext.jsinfer
 node_modules/
 deps/ace/
-plugins-server/fixtures/node_env/hello.js
+plugins-server/fixtures/
 npm-debug.log
 plugins-client/lib.apf/www/apf-packaged/apf_debug.js
 .sessions/
