--- a/plugins-server/cloud9.client-plugins-packed/package.json
+++ b/plugins-server/cloud9.client-plugins-packed/package.json
@@ -11,8 +11,7 @@
         "provides": ["client-plugins"],
         "consumes": [
             "static",
-            "log",
-            "sourcemint"
+            "log"
         ]
     }
 }
