Update terms, add hierarchy tree

--- a/doc/package.json
+++ b/doc/package.json
@@ -6,7 +6,8 @@
     "node": "~0.6.0"
   },
   "dependencies": {
-    "panino": ""
+    "panino": "",
+    "panda-docs": ""
   },
   "devDependencies": {}
 }
