Get ag working for search in files, too

--- a/plugins-server/cloud9.ide.search/.agignore
+++ b/plugins-server/cloud9.ide.search/.agignore
@@ -1,2 +1,16 @@
 *~backup-*
-node_modules/
+.c9revisions
+.git
+.svn
+.DS_Store
+.bzr
+.cdv
+~.dep
+~.dot
+~.nib
+~.plst
+.git
+.hg
+.pc
+.svn
+*.min.js
